# gst_video_server

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
launch/: qgc_streamer.launch
src/: node.cpp  server.cpp  server_nodelet.cpp
test/: node_bag_h264_stream_for_qgc.test  node_videotestsrc_autovideosink.test  nodelet_videotestsrc_autovideosink.test
