<?xml version="1.0"?>
<package format="2">
  <name>rtsp_streamer</name>
  <version>0.0.0</version>
  <description>The rtsp_streamer package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kabir@todo.todo">kabir</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rtsp_streamer</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <!-- system depend -->
  <build_depend>libgstreamer1.0-dev</build_depend>
  <exec_depend>libgstreamer1.0-0</exec_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
  <exec_depend>libgstreamer-plugins-base1.0-0</exec_depend>

  <!-- packages -->
  <depend>cv_bridge</depend> <!-- we really need opencv? -->
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
