<?xml version="1.0"?>
<package format="2">
  <name>gst_video_server</name>
  <version>0.0.0</version>
  <description>
    gst_video_server stream Image streams with user defined GStreamer pipelines.

    GStreamer support RTP, RTSP and many other protocols.
  </description>

  <license>ASFv2</license> <!-- Apache Software License 2.0 -->

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rtsp_streamer</url> -->

  <maintainer email="kabir@todo.todo">kabir</maintainer>
  <author email="kabir@todo.todo">kabir</author>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- system depend -->
  <build_depend>libgstreamer1.0-dev</build_depend>
  <exec_depend>libgstreamer1.0-0</exec_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
  <exec_depend>libgstreamer-plugins-base1.0-0</exec_depend>

  <!-- packages -->
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
  <!-- vim:set ts=2 sw=2 et: -->
</package>
